2007-05-24  Konstantin Triger <kostat@mainsoft.com>

	* TypeTranslator.cs: fix typo: set IsNullable flag for primitiveNullableTypes.

2007-05-14  Adar Wesley <adarw@mainsoft.com>

	* XmlSchemaExporter.cs: added missing overload for method ExportAnyType.

	* XmlSchemas.cs: added missing methods Add, AddReference, Contains,
	GetSchemas.

	* XmlSerializationReader.cs: added missing method AddReaderCount.

	* XmlSerializationWriter.cs: added missing overload WriteStartElement.

	* XmlSerializer.cs: added missing overload Serialize.

2007-04-25  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlCustomFormatter.cs : fix GenerateToXmlString() as well.

2007-04-25  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlCustomFormatter.cs :
	  in 2.0, use F instead of f for dateTime formatting.

2007-04-25  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemas.cs : 1.1-only duplicate check does not seem to be
	  required. This is also a workaround for 1.x ws proxy generation.

2007-04-24  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlCustomFormatter.cs : ditto for reader method generation.
	* SerializationCodeGenerator.cs : for generic nullable values it
	  needs to store ReadNullableString() result to a temporary variable.

2007-04-23  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs, XmlCustomFormatter.cs : generic nullable values did
	  not fit with non-nullable formatting. Fixed #80759 regression.

2007-04-20  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTypeMapping.cs, ReflectionHelper.cs,
	  XmlSerializationReaderInterpreter.cs, SerializationCodeGenerator.cs:
	  support instantiation by private constructor.

2007-04-19  Konstantin Triger <kostat@mainsoft.com>

	* XmlSchemaExporter.cs: do not export twice simple types.

2007-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs : forgot NET_2_0.

2007-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs : in get_ListItemTypeData(), check generic ICollection